[gd_scene load_steps=10 format=3 uid="uid://bmmr7bnoq7bnm"]

[ext_resource type="PackedScene" uid="uid://bg17t06c5lkup" path="res://base/brick.tscn" id="1_3llsr"]
[ext_resource type="Script" uid="uid://c64vatqgr200i" path="res://levels/lev_01.gd" id="1_x4ej3"]
[ext_resource type="PackedScene" uid="uid://565a0gyo81r0" path="res://base/ball.tscn" id="2_x4ej3"]
[ext_resource type="PackedScene" uid="uid://dnlm0664ijc33" path="res://base/paddle.tscn" id="3_v041o"]
[ext_resource type="Script" uid="uid://dpp8ltwayb3xh" path="res://base/ball.gd" id="3_x4ej3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4ej3"]
size = Vector2(22, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v041o"]
size = Vector2(1155, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6up0"]
size = Vector2(20, 685)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8g4k0"]
size = Vector2(1154, 27)

[node name="Level01" type="Node2D"]
script = ExtResource("1_x4ej3")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.25565878, 0.25565878, 0.25565878, 1)

[node name="Walls" type="StaticBody2D" parent="."]

[node name="LeftWall" type="Area2D" parent="Walls"]
position = Vector2(-5, 331)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
position = Vector2(-6, -7)
shape = SubResource("RectangleShape2D_x4ej3")

[node name="TopWall" type="Area2D" parent="Walls"]
position = Vector2(576, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(0.5, -2.5)
shape = SubResource("RectangleShape2D_v041o")

[node name="RightWall" type="Area2D" parent="Walls"]
position = Vector2(1162, 332.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_c6up0")

[node name="BottomWall" type="Area2D" parent="Walls"]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(575, 661.5)
shape = SubResource("RectangleShape2D_8g4k0")

[node name="Brick8" parent="." instance=ExtResource("1_3llsr")]
position = Vector2(113, 73)

[node name="Brick9" parent="." instance=ExtResource("1_3llsr")]
position = Vector2(240, 74)

[node name="Brick10" parent="." instance=ExtResource("1_3llsr")]
position = Vector2(377, 74)

[node name="Brick11" parent="." instance=ExtResource("1_3llsr")]
position = Vector2(504, 75)

[node name="Brick12" parent="." instance=ExtResource("1_3llsr")]
position = Vector2(633, 77)

[node name="Brick13" parent="." instance=ExtResource("1_3llsr")]
position = Vector2(759, 75)

[node name="Brick14" parent="." instance=ExtResource("1_3llsr")]
position = Vector2(878, 74)

[node name="Brick15" parent="." instance=ExtResource("1_3llsr")]
position = Vector2(1010, 72)

[node name="Ball" parent="." instance=ExtResource("2_x4ej3")]
position = Vector2(407, 345)
scale = Vector2(0.5, 0.5)
script = ExtResource("3_x4ej3")

[node name="Paddle" parent="." instance=ExtResource("3_v041o")]
position = Vector2(548, 529)
scale = Vector2(2, 0.5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ShadowBox" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21176471, 0.21176471, 0.21176471, 0.49803922)

[node name="GameOverLoseLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"

[node name="GameOverWinLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "YOU WIN!!!"

[connection signal="body_entered" from="Walls/LeftWall" to="." method="_on_left_wall_body_entered"]
[connection signal="body_entered" from="Walls/TopWall" to="." method="_on_top_wall_body_entered"]
[connection signal="body_entered" from="Walls/RightWall" to="." method="_on_right_wall_body_entered"]
[connection signal="body_entered" from="Walls/BottomWall" to="." method="_on_bottom_wall_body_entered"]
[connection signal="destroy" from="Brick8" to="." method="_on_brick_destroy"]
[connection signal="destroy" from="Brick9" to="." method="_on_brick_destroy"]
[connection signal="destroy" from="Brick10" to="." method="_on_brick_destroy"]
[connection signal="destroy" from="Brick11" to="." method="_on_brick_destroy"]
[connection signal="destroy" from="Brick12" to="." method="_on_brick_destroy"]
[connection signal="destroy" from="Brick13" to="." method="_on_brick_destroy"]
[connection signal="destroy" from="Brick14" to="." method="_on_brick_destroy"]
[connection signal="destroy" from="Brick15" to="." method="_on_brick_destroy"]
